Fixed highlighting behind nav bar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1482,7 +1482,7 @@
 		color: #ffffff;
 		font-weight: 200;
 		line-height: 1.5;
-		margin: 0 0 1em 0;
+		margin: 1em 0 1em 0;
 	}
 
 
@@ -2001,6 +2001,7 @@
             padding-right: 2em;
             float: left ;
             width: 33.33%;
+            
 		}
 
 		ul.alt {
